--- a/index.html
+++ b/index.html
@@ -1,1 +1,45 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Benjamin J McDaniel Portfolio</title>
+    <link rel="stylesheet" href="styles.css">
+</head>
+<body>
 
+    <header class="aboutMe">
+        <!-- IMAGE WITH NAME AT BOTTOM -->
+        <img class="profilePic" src="./images/benjaminprofile.jpg" alt="Profile picture of Benjamin McDaniel">
+        <h1 class="nameOnImage">Benjamin J McDaniel</h1>
+        <!-- ABOUT ME HEADER -->
+        <h2 class="aboutMeHeader">About Me</h2>
+        <!-- ABOUT ME TEXT -->
+        <p class="aboutMeText">I began learning web development in 2022 through a four month crash course at Centriq in Kansas City, Missouri. I learned Full Stack web development with focuses on .NET, C#, MVC formatting, React, SQLServer, and Postman API. After graduating from the course, I continued my education with the full stack Javascript course from The Odin Project. I am very eager to start my career in web development! Check out my most recent projects and reach out if you feel like you have an opportunity for me!  </p>
+        <!-- LINK TO RESUME -->
+        <a href="">RESUME<img class ="pdfIcon" src="./images/pdfIcon.svg" alt="PDF"></a>
+        <!-- GITHUB + LINKEDIN ICONS W LINKS -->
+        <a href="https://github.com/BenjaminJMcD"><img class="githubIcon" src="./images/github-mark.svg" alt="github.com/BenjaminJMcD opens in new page"></a>
+        <a href="www.linkedIn.com/in/benjaminjmcd"><img class="linkedInIcon" src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-original.svg" /></a>
+    </header>
+
+    <main class="projects">
+        <!-- PROJECTS HEADER -->
+        <!-- CARDS x 6
+            PICTURE OF PAGE
+            PAGE NAME
+            GITHUB ICON W LINK
+            DESCRIPTION
+        -->
+    </main>
+
+    <footer class="footer-contact">
+        <!-- CONTACT HEADER -->
+        <!-- PHONE ICON + NUMBER -->
+        <!-- EMAIL ICON + EMAIL -->
+        <!-- GITHUB + LINKED IN ICONS W LINKS -->
+    </footer>
+
+    
+</body>
+</html>
