build: basic HTML for cards. need specific images and descripts

--- a/index.html
+++ b/index.html
@@ -31,12 +31,49 @@
 
     <main class="projects">
         <!-- PROJECTS HEADER -->
+        <h2 class="projectsTitle">Projects</h2>
         <!-- CARDS x 6
-            PICTURE OF PAGE
+            PICTURE OF PAGE W LINK TO LIVE
             PAGE NAME
             GITHUB ICON W LINK
             DESCRIPTION
         -->
+        <div class="card">
+            <div class="image">PROJECT ONE IMAGE</div>
+            <h3 class="projectName">Restaurant</h3>
+            <p class="projectDescript">Restaurant page utilizing CSS from The Odin Project</p>
+            <a href="https://github.com/BenjaminJMcD/RestaurantPage"><img src="./images/github-mark.svg" alt="Restaurant Page code on github. Opens in new page." class="projectCodeIcon"></a>
+        </div>
+        <div class="card">
+            <div class="image">PROJECT ONE IMAGE</div>
+            <h3 class="projectName">Restaurant</h3>
+            <p class="projectDescript">Restaurant page utilizing CSS from The Odin Project</p>
+            <a href="https://github.com/BenjaminJMcD/RestaurantPage"><img src="./images/github-mark.svg" alt="Restaurant Page code on github. Opens in new page." class="projectCodeIcon"></a>
+        </div>
+        <div class="card">
+            <div class="image">PROJECT ONE IMAGE</div>
+            <h3 class="projectName">Restaurant</h3>
+            <p class="projectDescript">Restaurant page utilizing CSS from The Odin Project</p>
+            <a href="https://github.com/BenjaminJMcD/RestaurantPage"><img src="./images/github-mark.svg" alt="Restaurant Page code on github. Opens in new page." class="projectCodeIcon"></a>
+        </div>
+        <div class="card">
+            <div class="image">PROJECT ONE IMAGE</div>
+            <h3 class="projectName">Restaurant</h3>
+            <p class="projectDescript">Restaurant page utilizing CSS from The Odin Project</p>
+            <a href="https://github.com/BenjaminJMcD/RestaurantPage"><img src="./images/github-mark.svg" alt="Restaurant Page code on github. Opens in new page." class="projectCodeIcon"></a>
+        </div>
+        <div class="card">
+            <div class="image">PROJECT ONE IMAGE</div>
+            <h3 class="projectName">Restaurant</h3>
+            <p class="projectDescript">Restaurant page utilizing CSS from The Odin Project</p>
+            <a href="https://github.com/BenjaminJMcD/RestaurantPage"><img src="./images/github-mark.svg" alt="Restaurant Page code on github. Opens in new page." class="projectCodeIcon"></a>
+        </div>
+        <div class="card">
+            <div class="image">PROJECT ONE IMAGE</div>
+            <h3 class="projectName">Restaurant</h3>
+            <p class="projectDescript">Restaurant page utilizing CSS from The Odin Project</p>
+            <a href="https://github.com/BenjaminJMcD/RestaurantPage"><img src="./images/github-mark.svg" alt="Restaurant Page code on github. Opens in new page." class="projectCodeIcon"></a>
+        </div>
     </main>
 
     <footer class="footer-contact">
