style: added color to footer. fixed icon placement

--- a/index.html
+++ b/index.html
@@ -29,15 +29,17 @@
             Javascript course from The Odin Project. I am very eager to start my career in web development! Check out my
             most recent projects and reach out if you feel like you have an opportunity for me </p>
         <!-- LINK TO RESUME -->
-        <a href="">RESUME<img class="pdfIcon" src="./images/pdfIcon.svg" alt="PDF"></a>
-        <!-- GITHUB + LINKEDIN ICONS W LINKS -->
-        <a href="https://github.com/BenjaminJMcD"><img class="githubIcon" src="./images/github-mark.svg"
-                alt="github.com/BenjaminJMcD opens in new page"></a>
-        <a href="www.linkedIn.com/in/benjaminjmcd">
+        <div class="linkIconsHeader">
+            <a class="resumeLink" href="">RESUME<img class="pdfIcon" src="./images/pdfIcon.svg" alt="PDF"></a>
+            <!-- GITHUB + LINKEDIN ICONS W LINKS -->
+            <a href="https://github.com/BenjaminJMcD"><img class="githubIcon" src="./images/github-mark.svg"
+            alt="github.com/BenjaminJMcD opens in new page"></a>
+            <a href="www.linkedIn.com/in/benjaminjmcd">
             <img class="linkedInIcon"
-                src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg"
-                alt="linkedin.com/in/benjaminjmcd opens in a new page" />
-        </a>
+            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg"
+            alt="linkedin.com/in/benjaminjmcd opens in a new page" />
+            </a>
+        </div>
     </header>
 
     <main class="main">
@@ -114,19 +116,25 @@
         <!-- CONTACT HEADER -->
         <h2 class="contactTitle">CONTACT</h2>
         <!-- PHONE ICON + NUMBER -->
-        <img src="./images/cellphone.svg" alt="cell phone icon" class="phoneIcon">
-        <p class="phoneNumber">(555) 555-5555</p>
+        <div class="phoneContact">
+            <img src="./images/cellphone.svg" alt="cell phone icon" class="phoneIcon">
+            <p class="phoneNumber">(555) 555-5555</p>
+        </div>
         <!-- EMAIL ICON + EMAIL -->
-        <img src="./images/email.svg" alt="email icon" class="emailIcon">
-        <p class="email">BenjaminJMcD@gmail.com</p>
+        <div class="emailContact">
+            <img src="./images/email.svg" alt="email icon" class="emailIcon">
+            <p class="email">BenjaminJMcD@gmail.com</p>
+        </div>
         <!-- GITHUB + LINKED IN ICONS W LINKS -->
-        <a href="https://github.com/BenjaminJMcD"><img class="githubIcon" src="./images/github-mark.svg"
-                alt="github.com/BenjaminJMcD opens in new page"></a>
-        <a href="www.linkedIn.com/in/benjaminjmcd">
+        <div class="linkIconsFooter">
+            <a href="https://github.com/BenjaminJMcD"><img class="githubIcon" src="./images/github-mark.svg"
+            alt="github.com/BenjaminJMcD opens in new page"></a>
+            <a href="www.linkedIn.com/in/benjaminjmcd">
             <img class="linkedInIcon"
             src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg"
             alt="linkedin.com/in/benjaminjmcd opens in a new page" />
-        </a>
+            </a>
+        </div>
     </footer>
 
 
