build: project images, links, descriptions added

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <!-- GITHUB + LINKEDIN ICONS W LINKS -->
             <a href="https://github.com/BenjaminJMcD"><img class="githubIcon" src="./images/github-mark.svg"
             alt="github.com/BenjaminJMcD opens in new page"></a>
-            <a href="www.linkedIn.com/in/benjaminjmcd">
+            <a href="https://linkedIn.com/in/benjaminjmcd">
             <img class="linkedInIcon"
             src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg"
             alt="linkedin.com/in/benjaminjmcd opens in a new page" />
@@ -54,59 +54,59 @@
         <section class="projects">
             <div class="card">
                 <!-- CHANGE TO IMAGE W A TAG FOR LIVE LINK -->
-                <div class="image">PROJECT ONE IMAGE</div>
+                <a href="https://benjaminjmcd.github.io/Battleship"><img src="./images/battleship.jpeg" alt="Battleship project live page. Opens in new window" class="image"></a>
 
                 <div class="projectInfo">
-                    <h3 class="projectName">Restaurant</h3>
-                    <a href="https://github.com/BenjaminJMcD/RestaurantPage"><img src="./images/github-mark.svg"
-                    alt="Restaurant Page code on github. Opens in new page." class="projectCodeIcon"></a>
-                    <p class="projectDescript">Restaurant page utilizing CSS from The Odin Project</p>
+                    <h3 class="projectName">Battleship</h3>
+                    <a href="https://github.com/BenjaminJMcD/Battleship"><img src="./images/github-mark.svg"
+                    alt="Battleship game code on github. Opens in new window." class="projectCodeIcon"></a>
+                    <p class="projectDescript">Battleship game utilizing Test Driven Development though Jest and webpack via The Odin Project.</p>
                 </div>
                 
             </div>
             <div class="card">
-                <div class="image">PROJECT ONE IMAGE</div>
+                <a href="https://benjaminjmcd.github.io/RestaurantPage"><img src="./images/woodfire.jpeg" alt="Restaurant project live page. Opens in new window" class="image"></a>
                 <div class="projectInfo">
                     <h3 class="projectName">Restaurant</h3>
                     <a href="https://github.com/BenjaminJMcD/RestaurantPage"><img src="./images/github-mark.svg"
-                    alt="Restaurant Page code on github. Opens in new page." class="projectCodeIcon"></a>
-                    <p class="projectDescript">Restaurant page utilizing CSS from The Odin Project</p>
+                    alt="Restaurant Page code on github. Opens in new window." class="projectCodeIcon"></a>
+                    <p class="projectDescript">Restaurant page utilizing webpack and modular JavaScript from The Odin Project</p>
                 </div>
             </div>
             <div class="card">
-                <div class="image">PROJECT ONE IMAGE</div>
+                <a href="https://benjaminjmcd.github.io/TicTacToe"><img src="./images/tictactoe.jpeg" alt="Tic Tac Toe project live page. Opens in new window" class="image"></a>
                 <div class="projectInfo">
-                    <h3 class="projectName">Restaurant</h3>
-                    <a href="https://github.com/BenjaminJMcD/RestaurantPage"><img src="./images/github-mark.svg"
-                    alt="Restaurant Page code on github. Opens in new page." class="projectCodeIcon"></a>
-                    <p class="projectDescript">Restaurant page utilizing CSS from The Odin Project</p>
+                    <h3 class="projectName">Tic Tac Toe</h3>
+                    <a href="https://github.com/BenjaminJMcD/TicTacToe"><img src="./images/github-mark.svg"
+                    alt="Restaurant Page code on github. Opens in new window." class="projectCodeIcon"></a>
+                    <p class="projectDescript">TicTacToe game utilizing modular JavaScript and factory functions</p>
                 </div>
             </div>
             <div class="card">
-                <div class="image">PROJECT ONE IMAGE</div>
+                <a href="https://benjaminjmcd.github.io/Library-Odin"><img src="./images/library.jpeg" alt="Library project live page. Opens in new window" class="image"></a>
                 <div class="projectInfo">
-                    <h3 class="projectName">Restaurant</h3>
-                    <a href="https://github.com/BenjaminJMcD/RestaurantPage"><img src="./images/github-mark.svg"
-                    alt="Restaurant Page code on github. Opens in new page." class="projectCodeIcon"></a>
-                    <p class="projectDescript">Restaurant page utilizing CSS from The Odin Project</p>
+                    <h3 class="projectName">Library</h3>
+                    <a href="https://github.com/BenjaminJMcD/Library-Odin"><img src="./images/github-mark.svg"
+                    alt="Book storing library page code on github. Opens in new window." class="projectCodeIcon"></a>
+                    <p class="projectDescript">Library project from The Odin Project utilizing Javascript object constructors and prototypes</p>
                 </div>
             </div>
             <div class="card">
-                <div class="image">PROJECT ONE IMAGE</div>
+                <a href="https://benjaminjmcd.github.io/Etch-A-Sketch"><img src="./images/etch.jpeg" alt="Etch-A-Sketch project live page. Opens in new window" class="image"></a>
                 <div class="projectInfo">
-                    <h3 class="projectName">Restaurant</h3>
-                    <a href="https://github.com/BenjaminJMcD/RestaurantPage"><img src="./images/github-mark.svg"
-                    alt="Restaurant Page code on github. Opens in new page." class="projectCodeIcon"></a>
-                    <p class="projectDescript">Restaurant page utilizing CSS from The Odin Project</p>
+                    <h3 class="projectName">Etch-A-Sketch</h3>
+                    <a href="https://github.com/BenjaminJMcD/Etch-A-Sketch"><img src="./images/github-mark.svg"
+                    alt="Etch-A-Sketch project code on github. Opens in new window." class="projectCodeIcon"></a>
+                    <p class="projectDescript">Odin Foundations DOM Manipulation using HTML, JS, and CSS</p>
                 </div>
             </div>
             <div class="card">
-                <div class="image">PROJECT ONE IMAGE</div>
+                <a href="https://benjaminjmcd.github.io/Calculator"><img src="./images/calculator.jpeg" alt="Calculator project live page. Opens in new window" class="image"></a>
                 <div class="projectInfo">
                     <h3 class="projectName">Restaurant</h3>
-                    <a href="https://github.com/BenjaminJMcD/RestaurantPage"><img src="./images/github-mark.svg"
-                    alt="Restaurant Page code on github. Opens in new page." class="projectCodeIcon"></a>
-                    <p class="projectDescript">Restaurant page utilizing CSS from The Odin Project</p>
+                    <a href="https://github.com/BenjaminJMcD/Calculator"><img src="./images/github-mark.svg"
+                    alt="Calculator code on github. Opens in new window." class="projectCodeIcon"></a>
+                    <p class="projectDescript">Calculator project created with HTML, CSS, JS from The Odin Project</p>
                 </div>
             </div>
         </section>
