refactor: all links open in new page with target="_blank". Removed resume link

--- a/index.html
+++ b/index.html
@@ -24,87 +24,76 @@
         <h2 class="aboutMeHeader">About Me</h2>
         <!-- ABOUT ME TEXT -->
         <p class="aboutMeText">I began learning web development in 2022 through a four month crash course at Centriq in
-            Kansas City, Missouri. I learned Full Stack web development with focuses on .NET, C#, MVC formatting, React,
-            SQLServer, and Postman API. After graduating from the course, I continued my education with the full stack
-            Javascript course from The Odin Project. I am very eager to start my career in web development! Check out my
-            most recent projects and reach out if you feel like you have an opportunity for me </p>
-        <!-- LINK TO RESUME -->
-        <div class="linkIconsHeader">
-            <a class="resumeLink" href="">RESUME<img class="pdfIcon" src="./images/pdfIcon.svg" alt="PDF"></a>
-            <!-- GITHUB + LINKEDIN ICONS W LINKS -->
-            <a href="https://github.com/BenjaminJMcD"><img class="githubIcon" src="./images/github-mark.svg"
-            alt="github.com/BenjaminJMcD opens in new page"></a>
+        Kansas City, Missouri. I learned Full Stack web development with focuses on .NET, C#, MVC formatting, React,
+        SQLServer, and Postman API. After graduating from the course, I continued my education with the full stack
+        Javascript course from The Odin Project. I am very eager to start my career in web development! Check out my
+        most recent projects and reach out if you feel like you have an opportunity for me </p>
+        <!-- GITHUB + LINKEDIN ICONS W LINKS -->
+        <div class="iconsHeader">
+            <a href="https://github.com/BenjaminJMcD" target="_blank"><img class="githubIcon" src="./images/github-mark.svg"
+            alt="github.com/BenjaminJMcD opens in new window"></a>
             <a href="https://linkedIn.com/in/benjaminjmcd">
             <img class="linkedInIcon"
-            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg"
-            alt="linkedin.com/in/benjaminjmcd opens in a new page" />
-            </a>
+            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg" target="_blank"
+            alt="linkedin.com/in/benjaminjmcd opens in a new window" /></a>
         </div>
     </header>
 
     <main class="main">
-        <!-- PROJECTS HEADER -->
         <h2 class="projectsTitle">Projects</h2>
-        <!-- CARDS x 6
-            PICTURE OF PAGE W LINK TO LIVE
-            PAGE NAME
-            GITHUB ICON W LINK
-            DESCRIPTION
-        -->
         <section class="projects">
             <div class="card">
-                <!-- CHANGE TO IMAGE W A TAG FOR LIVE LINK -->
-                <a href="https://benjaminjmcd.github.io/Battleship"><img src="./images/battleship.jpeg" alt="Battleship project live page. Opens in new window" class="image"></a>
+                <a href="https://benjaminjmcd.github.io/Battleship" target="_blank"><img src="./images/battleship.jpeg" alt="Battleship project live page. Opens in new window" class="image"></a>
 
                 <div class="projectInfo">
                     <h3 class="projectName">Battleship</h3>
-                    <a href="https://github.com/BenjaminJMcD/Battleship"><img src="./images/github-mark.svg"
+                    <a href="https://github.com/BenjaminJMcD/Battleship" target="_blank"><img src="./images/github-mark.svg"
                     alt="Battleship game code on github. Opens in new window." class="projectCodeIcon"></a>
                     <p class="projectDescript">Battleship game utilizing Test Driven Development though Jest and webpack via The Odin Project.</p>
                 </div>
                 
             </div>
             <div class="card">
-                <a href="https://benjaminjmcd.github.io/RestaurantPage"><img src="./images/woodfire.jpeg" alt="Restaurant project live page. Opens in new window" class="image"></a>
+                <a href="https://benjaminjmcd.github.io/RestaurantPage" target="_blank"><img src="./images/woodfire.jpeg" alt="Restaurant project live page. Opens in new window" class="image"></a>
                 <div class="projectInfo">
                     <h3 class="projectName">Restaurant</h3>
-                    <a href="https://github.com/BenjaminJMcD/RestaurantPage"><img src="./images/github-mark.svg"
+                    <a href="https://github.com/BenjaminJMcD/RestaurantPage" target="_blank"><img src="./images/github-mark.svg"
                     alt="Restaurant Page code on github. Opens in new window." class="projectCodeIcon"></a>
                     <p class="projectDescript">Restaurant page utilizing webpack and modular JavaScript from The Odin Project</p>
                 </div>
             </div>
             <div class="card">
-                <a href="https://benjaminjmcd.github.io/TicTacToe"><img src="./images/tictactoe.jpeg" alt="Tic Tac Toe project live page. Opens in new window" class="image"></a>
+                <a href="https://benjaminjmcd.github.io/TicTacToe" target="_blank"><img src="./images/tictactoe.jpeg" alt="Tic Tac Toe project live page. Opens in new window" class="image"></a>
                 <div class="projectInfo">
                     <h3 class="projectName">Tic Tac Toe</h3>
-                    <a href="https://github.com/BenjaminJMcD/TicTacToe"><img src="./images/github-mark.svg"
+                    <a href="https://github.com/BenjaminJMcD/TicTacToe" target="_blank"><img src="./images/github-mark.svg"
                     alt="Restaurant Page code on github. Opens in new window." class="projectCodeIcon"></a>
                     <p class="projectDescript">TicTacToe game utilizing modular JavaScript and factory functions</p>
                 </div>
             </div>
             <div class="card">
-                <a href="https://benjaminjmcd.github.io/Library-Odin"><img src="./images/library.jpeg" alt="Library project live page. Opens in new window" class="image"></a>
+                <a href="https://benjaminjmcd.github.io/Library-Odin" target="_blank"><img src="./images/library.jpeg" alt="Library project live page. Opens in new window" class="image"></a>
                 <div class="projectInfo">
                     <h3 class="projectName">Library</h3>
-                    <a href="https://github.com/BenjaminJMcD/Library-Odin"><img src="./images/github-mark.svg"
+                    <a href="https://github.com/BenjaminJMcD/Library-Odin" target="_blank"><img src="./images/github-mark.svg"
                     alt="Book storing library page code on github. Opens in new window." class="projectCodeIcon"></a>
                     <p class="projectDescript">Library project from The Odin Project utilizing Javascript object constructors and prototypes</p>
                 </div>
             </div>
             <div class="card">
-                <a href="https://benjaminjmcd.github.io/Etch-A-Sketch"><img src="./images/etch.jpeg" alt="Etch-A-Sketch project live page. Opens in new window" class="image"></a>
+                <a href="https://benjaminjmcd.github.io/Etch-A-Sketch" target="_blank"><img src="./images/etch.jpeg" alt="Etch-A-Sketch project live page. Opens in new window" class="image"></a>
                 <div class="projectInfo">
                     <h3 class="projectName">Etch-A-Sketch</h3>
-                    <a href="https://github.com/BenjaminJMcD/Etch-A-Sketch"><img src="./images/github-mark.svg"
+                    <a href="https://github.com/BenjaminJMcD/Etch-A-Sketch" target="_blank"><img src="./images/github-mark.svg"
                     alt="Etch-A-Sketch project code on github. Opens in new window." class="projectCodeIcon"></a>
                     <p class="projectDescript">Odin Foundations DOM Manipulation using HTML, JS, and CSS</p>
                 </div>
             </div>
             <div class="card">
-                <a href="https://benjaminjmcd.github.io/Calculator"><img src="./images/calculator.jpeg" alt="Calculator project live page. Opens in new window" class="image"></a>
+                <a href="https://benjaminjmcd.github.io/Calculator" target="_blank"><img src="./images/calculator.jpeg" alt="Calculator project live page. Opens in new window" class="image"></a>
                 <div class="projectInfo">
-                    <h3 class="projectName">Restaurant</h3>
-                    <a href="https://github.com/BenjaminJMcD/Calculator"><img src="./images/github-mark.svg"
+                    <h3 class="projectName">Calculator</h3>
+                    <a href="https://github.com/BenjaminJMcD/Calculator" target="_blank"><img src="./images/github-mark.svg"
                     alt="Calculator code on github. Opens in new window." class="projectCodeIcon"></a>
                     <p class="projectDescript">Calculator project created with HTML, CSS, JS from The Odin Project</p>
                 </div>
@@ -127,12 +116,12 @@
         </div>
         <!-- GITHUB + LINKED IN ICONS W LINKS -->
         <div class="linkIconsFooter">
-            <a href="https://github.com/BenjaminJMcD"><img class="githubIcon" src="./images/github-mark.svg"
-            alt="github.com/BenjaminJMcD opens in new page"></a>
-            <a href="www.linkedIn.com/in/benjaminjmcd">
+            <a href="https://github.com/BenjaminJMcD" target="_blank"><img class="githubIcon" src="./images/github-mark.svg"
+            alt="github.com/BenjaminJMcD opens in new window"></a>
+            <a href="https://linkedIn.com/in/benjaminjmcd" target="_blank">
             <img class="linkedInIcon"
             src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg"
-            alt="linkedin.com/in/benjaminjmcd opens in a new page" />
+            alt="linkedin.com/in/benjaminjmcd opens in a new window" />
             </a>
         </div>
     </footer>
