--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
 
     <header class="aboutMe">
         <!-- IMAGE WITH NAME AT BOTTOM -->
-        <img class="profilePic" src="./images/benjaminprofile.jpg" alt="Profile picture of Benjamin McDaniel">
+        <div><img class="profilePic" src="./images/benjaminprofile.jpg" alt="Profile picture of Benjamin McDaniel"></div>
         <h1 class="nameOnImage">Benjamin J<br> McDaniel</h1>
         <!-- ABOUT ME HEADER -->
+        <div class="aboutMeSection">
         <h2 class="aboutMeHeader">About Me</h2>
         <!-- ABOUT ME TEXT -->
         <p class="aboutMeText">I began learning web development in 2022 through a four month crash course at Centriq in
@@ -36,6 +37,7 @@
             <img class="linkedInIcon"
             src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg" target="_blank"
             alt="linkedin.com/in/benjaminjmcd opens in a new window" /></a>
+        </div>
         </div>
     </header>
 
