--- a/index.html
+++ b/index.html
@@ -22,22 +22,18 @@
         <h1 class="nameOnImage">Benjamin J<br> McDaniel</h1>
         <!-- ABOUT ME HEADER -->
         <div class="aboutMeSection">
-        <h2 class="aboutMeHeader">About Me</h2>
-        <!-- ABOUT ME TEXT -->
-        <p class="aboutMeText">I began learning web development in 2022 through a four month crash course at Centriq in
-        Kansas City, Missouri. I learned Full Stack web development with focuses on .NET, C#, MVC formatting, React,
-        SQLServer, and Postman API. After graduating from the course, I continued my education with the full stack
-        Javascript course from The Odin Project. I am very eager to start my career in web development! Check out my
-        most recent projects and reach out if you feel like you have an opportunity for me </p>
-        <!-- GITHUB + LINKEDIN ICONS W LINKS -->
-        <div class="iconsHeader">
-            <a href="https://github.com/BenjaminJMcD" target="_blank"><img class="githubIcon" src="./images/github-mark.svg"
-            alt="github.com/BenjaminJMcD opens in new window"></a>
-            <a href="https://linkedIn.com/in/benjaminjmcd">
-            <img class="linkedInIcon"
-            src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg" target="_blank"
-            alt="linkedin.com/in/benjaminjmcd opens in a new window" /></a>
-        </div>
+            <h2 class="aboutMeHeader">About Me</h2>
+            <!-- ABOUT ME TEXT -->
+            <p class="aboutMeText">I began learning web development in 2022 through a four month crash course at Centriq in Kansas City, Missouri. I learned Full Stack web development with focuses on .NET, C#, MVC formatting, React SQLServer, and Postman API. After graduating from the course, I continued my education with the full stack Javascript course from The Odin Project. I am very eager to start my career in web development! Check out my most recent projects and reach out if you feel like you have an opportunity for me </p>
+            <!-- GITHUB + LINKEDIN ICONS W LINKS -->
+            <div class="iconsHeader">
+                <a href="https://github.com/BenjaminJMcD" target="_blank"><img class="githubIcon" src="./images/github-mark.svg"
+                alt="github.com/BenjaminJMcD opens in new window"></a>
+                <a href="https://linkedIn.com/in/benjaminjmcd">
+                <img class="linkedInIcon"
+                src="https://cdn.jsdelivr.net/gh/devicons/devicon@latest/icons/linkedin/linkedin-plain.svg" target="_blank"
+                alt="linkedin.com/in/benjaminjmcd opens in a new window" /></a>
+            </div>
         </div>
     </header>
 
