style: laptop styling header background, projects and contact adjusted

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <!-- EMAIL ICON + EMAIL -->
         <div class="emailContact">
             <img src="./images/email.svg" alt="email icon" class="emailIcon">
-            <p class="email">BenjaminJMcD@gmail.com</p>
+            <p class="email">ExcellentEmails@email.com</p>
         </div>
         <!-- GITHUB + LINKED IN ICONS W LINKS -->
         <div class="linkIconsFooter">
